<resources>
    <string name="app_name" translatable="false">BudgetBuddy</string>
    <string name="ingresos_underline"><u>INGRESOS</u></string>
    <string name="gastos_underline"><u>GASTOS</u></string>
    <string name="ingresos">INGRESOS</string>
    <string name="gastos">GASTOS</string>
    <string name="semana_underline"><u>12 dic. - 19 dic.</u></string>
    <string name="periodo_underline">Periodo</string>
    <string name="year_underline"><u>Año</u></string>
    <string name="recordar"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="my_gestor">My Gestor</string>
    <string name="divisa">Divisa</string>
    <string name="inicio">Inicio</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="editar_categorias">Editar Categorias</string>
    <string name="ajustes">Ajustes</string>
    <string name="todo">TODO</string>
    <string name="grupal">Grupal</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="password">Contraseña</string>
    <string name="repetirPass">Repetir Contraseña</string>
    <string name="aplicarCambios">Aplicar Cambios</string>
    <string name="idioma">Idioma</string>
    <string name="periodoDefecto">Periodo por defecto</string>
    <string name="sinRedondear">Sin redondear</string>
    <string name="seleccioneTema">Seleccione el tema</string>
    <string name="pantallaInicial">Pantalla Inicial</string>
    <string name="pantallaInicialMygestor">Pantalla Inicial My Gestor</string>
    <string name="eliminarDatos">Eliminar todos los datos</string>
    <string name="espanyol">Español</string>
    <string name="semanal">Semanal</string>
    <string name="predeterminado">Predeterminado</string>
    <string name="borrar_datos">Borrar Datos</string>
    <string name="diario">Diario</string>
    <string name="mensual">Mensual</string>
    <string name="anual">Anual</string>
    <string name="gestor_gastos_grupal">Gestor Gastos Grupal</string>
    <string name="gestor_con_saldo">Gestor con Saldo</string>
    <string name="dia">Dia</string>
    <string name="oscuro">OSCURO</string>
    <string name="noche">NOCHE</string>
    <string name="nombre1">nombre1</string>
    <string name="nombre2">nombre2</string>
    <string name="email">Email</string>
    <string name="eliminar">eliminar</string>
    <string name="Home">Home</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Se ha abierto el menu</string>
    <string name="navigation_drawer_close">Se ha cerrado el menu</string>

    <string name="nombre">Nombre</string>
    <string name="español">Español</string>
    <string name="english">English</string>
    <string name="fran_ais">Français</string>
    <string name="deutsche">Deutsche</string>
    <string name="portugu_s">Português</string>
    <string name="crear_usuario">CREAR USUARIO</string>
    <string name="saldo_restante">Saldo Restante</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="periodo">Periodo</string>
    <string name="año">Año</string>
    <string name="cuentas">Cuentas</string>
    <string name="ver_todos">Ver Todos</string>
    <string name="editar_ingreso">Editar Ingreso</string>
    <string name="salario">Salario</string>
    <string name="comentario_editable">Comentario editable</string>
    <string name="editar">EDITAR</string>
    <string name="editar_gasto">Editar Gasto</string>
    <string name="ocio">Ocio</string>
    <string name="añadir_ingreso">Añadir Ingreso</string>
    <string name="añadir">AÑADIR</string>
    <string name="añadir_gasto">Añadir Gasto</string>
    <string name="breve_descripcion">Breve Descripcion...</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="gestor_con_ingresos">Gestor con Ingresos</string>
    <string name="crear_categoria">Crear Categoría</string>
    <string name="nombre_de_la_categoria">Nombre de la categoria</string>
    <string name="categorias">Categorías</string>
    <string name="añadir_categoria">Añadir Categoría</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="user">USER</string>
    <string name="ejemplo_mail_com">ejemplo@mail.com</string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="Divisas">Divisas</string>
    <string name="desactivado">Desactivado</string>
    <string name="activado">Activado</string>

</resources>