<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/Home" />
            <item
                android:id="@+id/nav_edit_cat"
                android:icon="@drawable/editar"

                android:title="@string/editar_categorias" />
            <item
                android:id="@+id/nav_divisa"
                android:icon="@drawable/divisa"
                android:title="@string/divisa" />
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ajustes"
                android:title="@string/ajustes" />

        </group>

        <group
            android:id="@+id/third_section"
            android:checkableBehavior="none">

            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/cerrar"
                android:title="@string/cerrar_sesion"
                />
        </group>

</menu>