<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="380dp"
        android:layout_height="434dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="292dp"
            android:layout_height="390dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/rbEspañol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:minHeight="48dp"
                    android:text="@string/español"
                    android:textSize="24dp" />

                <RadioButton
                    android:id="@+id/rbEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:minHeight="48dp"
                    android:text="@string/english"
                    android:textSize="24dp" />

                <RadioButton
                    android:id="@+id/rbMensual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:minHeight="48dp"
                    android:text="@string/fran_ais"
                    android:textSize="24dp" />

                <RadioButton
                    android:id="@+id/rbAnual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:minHeight="48dp"
                    android:text="@string/deutsche"
                    android:textSize="24dp" />

                <RadioButton
                    android:id="@+id/rbPortugues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:minHeight="48dp"
                    android:text="@string/portugu_s"
                    android:textSize="24dp" />

            </RadioGroup>

            <Button
                android:id="@+id/btnAceptarr"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/default_button"
                android:text="@string/aceptar" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/default_button_cancel"
                android:text="@string/cancelar"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>