<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_backgound"
    tools:context=".CheckProfile">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="118dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/icPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="TODO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:paddingStart="50dp">

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/nombre_usuario"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cajaEmail"
                    android:layout_width="192dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_inputtext"
                    android:ems="10"
                    android:fontFamily="@font/oswald"
                    android:hint="@string/ejemplo_mail_com"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="@color/light_black"
                    android:textColorHint="#989898"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>


    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="140dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/oswald"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cajaPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_inputtext"
                android:ems="10"
                android:fontFamily="@font/oswald"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:text="iii"
                android:textColor="@color/light_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/default_button"
                android:fontFamily="@font/oswald"
                android:text="@string/aplicarCambios"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFechaPagada" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/default_button_cancel"
                android:fontFamily="@font/oswald"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:iconPadding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFechaPagada" />


        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="236dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/long_button_empty"
        android:fontFamily="@font/oswald"
        android:text="@string/user"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>