<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_info">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarA"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/cuentas"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarA"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="@+id/toolbarA"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnAtras"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:background="@drawable/default_button_simple"
        android:clickable="true"
        android:foreground="@drawable/back_row"
        android:foregroundGravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarA">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tvDia"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/oswald"
                android:text="@string/dia"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/tvSemana"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/oswald"
                android:text="@string/semana"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/tvMes"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/oswald"
                android:text="@string/mes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/tvAnho"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/oswald"
                android:text="@string/año"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tvPeriodo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/oswald"
                android:text="@string/periodo_underline"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvResultadoFecha"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/oswald"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="150dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoFecha"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoFecha"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvIngresoView"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswald"
        android:text="@string/ingresos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswald"
        android:text="@string/gastos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresoView" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_inputtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textCalculo"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:fontFamily="@font/oswald"
        android:text="DISPONIBLE"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvDisponible"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/oswald"
        android:text="800 €"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvIngresos"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswald"
        android:text="900 €"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toEndOf="@+id/tvIngresoView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvGastos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/oswald"
        android:text="100 €"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tvIngresos" />

    <ListView
        android:id="@+id/lista_gastos"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/butAll"
        android:layout_width="175dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/long_button_orange"
        android:fontFamily="@font/oswald"
        android:text="@string/ver_todos"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

